Update css to fix spacing errors in code

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,10 +281,6 @@ nav > ul > li > a:active {
   display: table;
 }
 
-transition: { 
-  [transition-property] [transition-duration] [transition-timing-function] [transition-delay];
-}
-
 #about-picture {
   width: 100%;
   max-width: 100%;
@@ -298,9 +294,9 @@ transition: {
 }
 
 @keyframes color-change {
-  0% {fill: #edc655;}
-  50% {fill: #fcffad;}
-  100% {fill: #f76414;}
+  0% { fill: #edc655; }
+  50% { fill: #fcffad; }
+  100% { fill: #f76414; }
 }
 
 .sun {
@@ -308,8 +304,8 @@ transition: {
 }
 
 @keyframes cloud-move {
-  from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
+  from { transform: translate(0, 50px); }
+  to { transform: translate(200px, 50px); }
 }
 
 .cloud-front {
@@ -317,8 +313,8 @@ transition: {
 }
 
 @keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(356px, 48px);}
+  from { transform: translate(446px, 48px); }
+  to { transform: translate(356px, 48px); }
 }
 
 .cloud-back {
@@ -326,8 +322,8 @@ transition: {
 }
 
 @keyframes clouds-move {
-  from {transition: translate(10px, 18px);}
-  to {transform: translate(30px, 18px);}
+  from { transition: translate(10px, 18px); }
+  to { transform: translate(30px, 18px); }
 }
 
 .clouds {
@@ -335,32 +331,35 @@ transition: {
 }
 
 /* Border X get width  */
-div.borderXwidth a:before, div.borderXwidth a:after
+div.borderXwidth a::before,
+div.borderXwidth a::after
 {
-    position: absolute;
-    opacity: 0;
-    width: 0%;
-    height: 2px;
-    content: '';
-    background: #FFF;
-    transition: all 0.3s;
+  position: absolute;
+  opacity: 0;
+  width: 0%;
+  height: 2px;
+  content: '';
+  background: #fff;
+  transition: all 0.3s;
 }
 
-div.borderXwidth a:before
+div.borderXwidth a::before
 {
-    left: 0px;
-    top: 0px;
+  left: 0;
+  top: 0;
 }
 
-div.borderXwidth a:after
+div.borderXwidth a::after
 {
-    right: 0px;
-    bottom: 0px;
+  right: 0;
+  bottom: 0;
 }
 
-div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
+div.borderXwidth a:hover::before,
+div.borderXwidth a:hover::after
+
 {
-    opacity: 1;
-    width: 100%;
+  opacity: 1;
+  width: 100%;
 }
 
